一点点调整

--- a/src/main/resources/lang_zh_CN.properties
+++ b/src/main/resources/lang_zh_CN.properties
@@ -589,7 +589,7 @@ contributorLabel=\u8D21\u732E\u8005
 referenceLabel=\u5F15\u7528
 coldTagsLabel=\u51B7\u95E8\u6807\u7B7E
 trendTagsLabel=\u70ED\u95E8\u6807\u7B7E
-symphonyLabel=Sym
+symphonyLabel=\u4e91\u8c37-\u4e91\u6de1\u98ce\u8f7b\u865a\u6000\u82e5\u8c37
 symphonyEnLabel=HacPai
 visionLabel=\u9ED1\u5BA2\u4E0E\u753B\u5BB6
 submitLabel=\u63D0\u4EA4
