--- a/src/main/resources/lang_zh_CN.properties
+++ b/src/main/resources/lang_zh_CN.properties
@@ -375,8 +375,8 @@ myPointLabel=\u6211\u7684\u79EF\u5206
 myCommentLabel=\u6211\u7684\u56DE\u5E16
 myArticleLabel=\u6211\u7684\u5E16\u5B50
 searchSthLabel=\u968F\u4FBF\u641C\u70B9\u4EC0\u4E48....
-iamPainterLabel=\u6211\u662F\u753B\u5BB6
-iamHackerLabel=\u6211\u662F\u9ED1\u5BA2
+iamPainterLabel=\u6211\u662F\u8fd0\u7ef4
+iamHackerLabel=\u6211\u662F\u5f00\u53d1
 indexLabel=\u9996\u9875
 moreLabel=\u66F4\u591A
 postWorksLabel=\u53D1\u5E03\u5E16\u5B50\u6216\u4F5C\u54C1
@@ -444,10 +444,10 @@ pointTransferTipLabel=\u8F6C\u8D26\u540E\u4F59\u989D\u5FC5\u987B\u5927\u4E8E <i>
 pointTransferLabel=\u79EF\u5206\u8F6C\u8D26
 inviteTipLabel=\u5982\u679C\u6709\u65B0\u7528\u6237\u901A\u8FC7\u4F60\u7684\u9080\u8BF7\u94FE\u63A5\u6CE8\u518C\uFF0C\u90A3\u4E48\u4F60\u548C\u65B0\u7528\u6237\u90FD\u5C06\u83B7\u5F97 {point} \u79EF\u5206
 inviteLabel=\u9080\u8BF7
-painterLabel=\u753B\u5BB6
-designerLabel=\u8BBE\u8BA1\u5E08
-hackerLabel=\u9ED1\u5BA2
-programmerLabel=\u7A0B\u5E8F\u5458
+painterLabel=\u8fd0\u7ef4
+designerLabel=\u8fd0\u7ef4
+hackerLabel=\u5f00\u53d1
+programmerLabel=\u5f00\u53d1
 timeLabel=\u65F6\u95F4
 balanceLabel=\u4F59\u989D
 sumLabel=\u6570\u989D
@@ -584,9 +584,9 @@ numVIPLabel=\u53F7\u4F1A\u5458
 userIntroLabel=\u4E2A\u6027\u7B7E\u540D
 symDescriptionLabel=\u9ED1\u5BA2\u6D3E\u662F\u7A0B\u5E8F\u5458\u548C\u8BBE\u8BA1\u5E08\u7684\u805A\u96C6\u5730\uFF0C\u6C47\u805A\u4E86\u4E25\u8C28\u6C42\u5B9E\u7684\u5DE5\u7A0B\u5E08\u548C\u5BCC\u6709\u521B\u610F\u7684\u8BBE\u8BA1\u5E08
 symAnnouncementLabel=\u516C\u544A
-introLabel=<h1>\u6B22\u8FCE\u6765\u5230 Sym \u793E\u533A</h1><p>\u8FD9\u91CC\u662F\u7A0B\u5E8F\u5458\u548C\u8BBE\u8BA1\u5E08\u7684\u805A\u96C6\u5730\uFF0C\u6C47\u805A\u4E86\u4E25\u8C28\u6C42\u5B9E\u7684\u5DE5\u7A0B\u5E08\u548C\u5BCC\u6709\u521B\u610F\u7684\u8BBE\u8BA1\u5E08\u3002</p>\
-<p>\u6211\u4EEC\u6B63\u5728\u6784\u5EFA\u4E00\u4E2A\u6D3B\u8DC3\u7684\u5C0F\u4F17\u793E\u533A\u3002\u5927\u5BB6\u5728\u8FD9\u91CC\u76F8\u4E92<strong>\u4FE1\u4EFB</strong>\uFF0C\u4EE5<em>\u5E73\u7B49 \u2022 \u81EA\u7531 \u2022 \u5954\u653E</em>\u7684\u4EF7\u503C\u89C2\u8FDB\u884C\u5206\u4EAB\u4EA4\u6D41\u3002\u6700\u7EC8\uFF0C\u5E0C\u671B\u5927\u5BB6\u80FD\u591F\u627E\u5230\u4E0E\u81EA\u5DF1\u5FD7\u540C\u9053\u5408\u7684\u4F19\u4F34\uFF0C\u5171\u540C\u6210\u957F\u3002</p>\
-<p>\u6700\u540E\u8BF7\u5927\u5BB6\u5171\u540C\u7231\u62A4\u8FD9\u4E2A<i>\u81EA\u7531</i>\u7684\u4EA4\u6D41\u73AF\u5883\uFF0C\u76F8\u4FE1\u8FD9\u91CC\u4E00\u5B9A\u662F\u4F60\u6CE8\u518C\u8FC7\u7684\u6240\u6709\u793E\u533A\u4E2D\u7528\u6237\u4F53\u9A8C\u6700\u597D\u7684 <img align="absmiddle" alt=":heart_eyes:" class="emoji" src="${staticServePath}/emoji/graphics/heart_eyes.png" title=":heart_eyes:">
+introLabel=<h1>\u6b22\u8fce\u6765\u5230 <a class="logo" href=""></a></h1><p>\u5982\u679c\u4f60\u662f\u5f00\u53d1\u5de5\u7a0b\u5e08\uff0c\u6b63\u5728\u4e3a\u6bcf\u6b21\u53d1\u5e03\u4ea7\u54c1\u800c\u52a0\u73ed\u71ac\u591c\u611f\u5230\u82e6\u607c\uff0c\u53c8\u6216\u8005\u4f60\u662f\u4e00\u4f4d\u7cfb\u7edf\u5de5\u7a0b\u5e08\uff0c\u6b63\u5728\u4e3a\u9891\u7e41\u7684\u4ea7\u54c1\u53d1\u5e03\uff0c\u7e41\u7410\u7684\u914d\u7f6e\u5b89\u5168\u7b56\u7565\u7684\u4fee\u6539\u611f\u5230\u538c\u5026\uff0c\u8fd9\u91cc\u6216\u8bb8\u4f60\u80fd\u627e\u5230\u6446\u8131\u56f0\u5883\u7684\u65b9\u6cd5\u3002</p>\
+<p>\u672c\u793e\u533a\u65e8\u5728\u6784\u5efa\u4e00\u4e2a\u63a8\u52a8devops\u843d\u5730\u7684\u5c0f\u4f17\u793e\u533a\uff0c\u56f4\u7ed5\u4e91\u8ba1\u7b97\u3001\u5fae\u670d\u52a1\u3001devops\u7b49\u4e3b\u9898\uff0c\u63a2\u8ba8\u5982\u4f55\u6d88\u9664\u5f00\u53d1\u8fd0\u7ef4\u7684\u9e3f\u6c9f\uff0c\u63d0\u9ad8\u4ea7\u54c1\u8fed\u4ee3\u6548\u7387\uff0c\u89e3\u653e\u5e7f\u5927\u5904\u5728\u6c34\u751f\u706b\u70ed\u4e2d\u7684\u7801\u519c\u4eec\u3002\u5927\u5bb6\u5728\u8fd9\u91cc\u76f8\u4e92<strong>\u4fe1\u4efb</strong>\uff0c\u4ee5<em>\u5e73\u7b49 \u2022 \u81ea\u7531 \u2022 \u5954\u653e</em>\u7684\u4ef7\u503c\u89c2\u8fdb\u884c\u5206\u4eab\u4ea4\u6d41\u3002\u6700\u7ec8\uff0c\u5e0c\u671b\u5927\u5bb6\u80fd\u591f\u627e\u5230\u4e0e\u81ea\u5df1\u5fd7\u540c\u9053\u5408\u7684\u4f19\u4f34\uff0c\u5171\u540c\u6210\u957f\u3002</p>\
+<p>\u6700\u540e\u8bf7\u5927\u5bb6\u5171\u540c\u7231\u62a4\u8fd9\u4e2a<i>\u81ea\u7531</i>\u7684\u4ea4\u6d41\u73af\u5883\uff0c\u76f8\u4fe1\u8fd9\u91cc\u4e00\u5b9a\u662f\u4f60\u6ce8\u518c\u8fc7\u7684\u6240\u6709\u793e\u533a\u4e2d\u7528\u6237\u4f53\u9a8c\u6700\u597d\u7684 <img align="absmiddle" alt=":heart_eyes:" class="emoji" src="${staticServePath}/emoji/graphics/heart_eyes.png" title=":heart_eyes:">
 creatorLabel=\u521B\u5EFA\u8005
 contributorLabel=\u8D21\u732E\u8005
 referenceLabel=\u5F15\u7528
